fidoconfig 0.91
---------------

----- cvs ci ------
Sat Apr 21 2:44:00 MSK 2000
Nestyurkin Nikolay:
* bugfix of previous fix (int->uint)

----- cvs ci ------
Wed Apr 19 16:52:16 MSD 2000
max (patch from Serguei Revtov):
* unifying some boolean tokens parsing

----- cvs ci ------
Sat Apr 15 14:16:00 MSK 2000
nn:
* disableTID small fix

----- cvs ci ------
Sat Apr 15 10:47:38 NOVST 2000
max:
* add disableTID token

----- cvs ci ------
Sun Apr 10 16:40:00 CET 2000
sms:
* some changes to fidoconfig.h and affected files needed to automatically
  convert fidoconfig.h to fidoconf.pas with h2pas

----- cvs ci ------
Sun Apr  9 22:41:43 NOVST 2000
max:
* add e_readCheck & e_writeCheck
* now export, import & mandatory dispayed by tparser correctly

----- cvs ci ------
Tue Apr  4 12:51:02 MSD 2000
max (patch from Serguei Revtov):
* createAreasCase & areasFileNameCase tokens

----- cvs ci ------
Mon Apr  3 17:39:30 NOVST 2000
max (patch from Serguei Revtov):
* additional checks on carbons

----- cvs ci ------
Sat Apr  1 20:45:39 NOVST 2000
max:
* document tokens LinkGrp & NetArea

----- cvs ci ------
Mon Mar 27 13:28:49 MSD 2000
max (patch from Serguei Revtov):
* pktsize token

----- cvs ci ------
Thu Mar 23 16:10:45 NOVT 2000
max:
* exit to shell after printing error when passthrough + sqush (jam, sdm) used
patch from Serguei:
* -nopack token

----- cvs ci ------
Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
* change legacy SUN & Win makefiles to compile with new includes, simplifying
* return back default config for "other unixes"

----- cvs ci ------
Sun Mar 19 21:26:41 NOVT 2000
max:
* document areafixkillrequests & frequestfromuplink

----- cvs ci ------
Fri Mar 17 11:52:37 NOVT 2000
max (patch from Serguei Revtov):
* added linkDefaults

----- cvs ci ------
Thu Mar 9 2000 17:42:30 CET
sms:
* installing header files to $INCDIR/fidoconfig

----- cvs ci ------
Thu Mar 9 2000 17:22:10 CET
sms:
* fixed segfault caused by new CFGDIR-code

----- cvs ci ------