@@ -1,9 +1,0 @@
-mv makefile.com makefile.common
-mv fc2ged.c     fconf2golded.c 
-mv fc2msged.c   fconf2msged.c  
-mv fc2aed.c     fconf2aquaed.c
-mv fc2fgate.c   fconf2fidogate.c
-mv fc2sq.c      fconf2squish.c
-mv fidoconf.c   fidoconfig.c   
-mv fidoconf.h   fidoconfig.h
-mv fecfg2fc.c   fecfg2fconf.c
